fix(toast): add gap in toast-title (#2775)

--- a/packages/style/scss/components/toast.scss
+++ b/packages/style/scss/components/toast.scss
@@ -150,6 +150,7 @@ $toast-close-padding-left: 20px;
 .toast-title {
     display: flex;
     flex-direction: row;
+    gap: 16px;
     align-items: center;
     justify-content: space-between;
     overflow-wrap: anywhere;
